--- a/main.html
+++ b/main.html
@@ -87,10 +87,11 @@
     .container {
       width: 90%;
       margin: 0 auto;
+      
     }
 
     header {
-      background: whitesmoke;
+      background-color: #6BAA75;
     }
 
     header::after {
@@ -136,6 +137,11 @@
       background-color: whitesmoke;
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
+    
+    .container .row{
+      background-color: #6BAA75;
+    }
+
 
     @media screen and (max-width: 700px) {
       header {
@@ -162,13 +168,13 @@
     </div>
   </header>
 
-  <div class="container rounded bg-white mt-5 mb-5">
+  <div class="container rounded mt-5 mb-5">
     <div class="row">
-      <h1 style="font-size: 5vw; margin-left: 5%; margin-top: 2%; text-decoration: underline;">Welcome back, <span
+      <h1 style="color: #CBFF4D; font-size: 5vw; text-align:center; margin-top: 2%; font-family: 'Impact';">Welcome back, <span
           id="name-goes-here"></span>!
       </h1>
-      <h2 style="color: green; font-size: 4vw; margin-left: 10%;">Craving some more?</h2>
-      <h2 style="font-size: 3vw; margin-left: 3%; margin-top: 2%; text-decoration: underline;">Recomended Menu Items
+      <h2 style="color: #CBFF4D; font-size: 4vw; text-align: center; font-family: 'Times New Roman';">Craving some more?</h2>
+      <h3 style="color: black; font-size: 2.5vw; font-family: 'Times New Roman'; margin-left: 3%; margin-top: 2%;">Recomended Menu Items
       </h2>
 
     </div>
