--- a/quiz.html
+++ b/quiz.html
@@ -160,7 +160,6 @@
   <header>
     <div class="container">
       <img src="images/bowl.png" alt="logo" class="logo">
-
       <nav>
         <ul>
           <li><a href="main.html"><i class="material-icons" style="font-size: 100%;">home</i>Home</a></li>
@@ -169,7 +168,6 @@
           </li>
         </ul>
       </nav>
-
     </div>
   </header>
 
@@ -177,62 +175,71 @@
     <div class="row justify-content-center">
       <div class="col">
         <h1 style="font-size: 6vw;">Welcome to <span style="color: green;">Fitmeal</span></h1>
-        <h1 style="text-decoration: underline; color: darkgreen;"> Do you have any food or diet restrictions?</h1>
+        <h1 style="color: darkgreen;"> Do you have any food or diet restrictions?</h1>
 
-        <!----------------------- Checklist form for quiz details ---------------------->
+        <!----------------------- Checkbox form for quiz details ---------------------->
         <form>
           <fieldset class="mb-3" id="quizFields" disabled>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Vegetarian"
+                id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
                 Vegetarian
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Vegan"
+                id="flexRadioDefault2">
               <label class="form-check-label" for="flexRadioDefault2">
                 Vegan
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault3">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Pescatarian"
+                id="flexRadioDefault3">
               <label class="form-check-label" for="flexRadioDefault3">
                 Pescatarian
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault4">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Gluten-Free"
+                id="flexRadioDefault4">
               <label class="form-check-label" for="flexRadioDefault4">
                 Gluten-Free
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault5">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Lactose-Free"
+                id="flexRadioDefault5">
               <label class="form-check-label" for="flexRadioDefault5">
                 Lactose-Free
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault6">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Keto"
+                id="flexRadioDefault6">
               <label class="form-check-label" for="flexRadioDefault6">
                 Keto
               </label>
             </div>
-            <h1 style="text-decoration: underline;  color: darkgreen;">Do you have any food or diet preferences?</h1>
+            <h1 style="color: darkgreen;">Do you have any food or diet preferences?</h1>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault7">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Spicy"
+                id="flexRadioDefault7">
               <label class="form-check-label" for="flexRadioDefault7">
                 Spicy
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault8">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Protein"
+                id="flexRadioDefault8">
               <label class="form-check-label" for="flexRadioDefault8">
                 High Protein
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault9">
+              <input class="form-check-input" type="checkbox" name="flexRadioDefault" value="Snack"
+                id="flexRadioDefault9">
               <label class="form-check-label" for="flexRadioDefault9">
                 Snack/Appetizer
               </label>
@@ -241,12 +248,14 @@
           <div class="d-flex justify-content-center mt-5">
             <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
             <span style="width: 10px"></span>
-            <button type="button" class="btn btn-success" onclick="saveUserInfo()">Save</button>
+            <button id="btn" type="button" class="btn btn-success" onclick="saveUserInfo()">Save</button>
           </div>
         </form>
+        <br>
       </div>
     </div>
   </div>
+
 
   <script>
     var currentUser;
@@ -258,6 +267,7 @@
 
           //go to the correct user document by referencing to the user uid
           currentUser = db.collection("users").doc(user.uid)
+
           //get the document for current user.
           currentUser.get()
             .then(userDoc => {
@@ -316,34 +326,38 @@
       document.getElementById('quizFields').disabled = false;
     }
 
-    function saveUserInfo() {
-      quiz1 = document.getElementById('flexRadioDefault1').value;
-      quiz2 = document.getElementById('flexRadioDefault2').value;
-      quiz3 = document.getElementById('flexRadioDefault3').value;
-      quiz4 = document.getElementById('flexRadioDefault4').value;
-      quiz5 = document.getElementById('flexRadioDefault5').value;
-      quiz6 = document.getElementById('flexRadioDefault6').value;
-      quiz7 = document.getElementById('flexRadioDefault7').value;
-      quiz8 = document.getElementById('flexRadioDefault8').value;
-      quiz9 = document.getElementById('flexRadioDefault9').value;
-
+    function saveUserInfo(name) {
+      const checkboxes = document.querySelectorAll(`input[name="${name}"]:checked`);
+      let values = [];
+      checkboxes.forEach((checkbox) => {
+        values.push(checkbox.value);
+      });
       currentUser.update({
-          vegetarian: quiz1,
-          vegan: quiz2,
-          pescatarian: quiz3,
-          gluten_free: quiz4,
-          lactose_free: quiz5,
-          keto: quiz6,
-          spicy: quiz7,
-          protein: quiz8,
-          snack: quiz9
-        })
-        .then(() => {
-          console.log("Document successfully updated!");
-        })
-
-      document.getElementById('personalInfoFields').disabled = true;
+        values
+      })
     }
+
+    const btn = document.querySelector('#btn');
+    btn.addEventListener('click', (event) => {
+      saveUserInfo('flexRadioDefault');
+    });
+
+    currentUser.update({
+        vegetarian: quiz1,
+        vegan: quiz2,
+        pescatarian: quiz3,
+        gluten_free: quiz4,
+        lactose_free: quiz5,
+        keto: quiz6,
+        spicy: quiz7,
+        protein: quiz8,
+        snack: quiz9
+      })
+      .then(() => {
+        console.log("Document successfully updated!");
+      })
+
+    document.getElementById('personalInfoFields').disabled = true;
   </script>
 
 </body>
